# cap-python-client

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cap_client.py  development.md  example.py  pyproject.toml  queries.graphql  requirements.txt
.github/workflows/: python-app.yml
cap_client/: __init__.py  cap.py  cap_client.py  client.py  schema.py
cap_client/client/: __init__.py  base_client.py  base_model.py  client.py  create_session.py  dataset_ready.py  embedding_data.py  fragments.py  input_types.py  lookup_cells.py  search_datasets.py  serialize.py
cap_client/graphql_client/: __init__.py  client.py  custom_fields.py  custom_mutations.py  custom_queries.py  custom_typing_fields.py  enums.py  input_types.py
cap_sc_client/: cap.py
cap_sc_client/client/: __init__.py  base_client.py  client.py  create_session.py  dataset_ready.py  embedding_data.py  exceptions.py  files_status.py  fragments.py  general_de.py  heatmap.py  highly_variable_genes.py  input_types.py  md_commons_query.py  persisted_queries.py
examples/: example.ipynb  md_page.ipynb
graphql_client/: client.py  fragments.py  search_datasets.py
test/: authentication_test.py  cap_auth_test.py  example.json  public_api_test.py  readme.md  test.py  test_api.py  unit_test.py
