[project]
name="cap_client"
version="0.0.4"
license = {file = "LICENSE"}
authors= [
  { name="M. Sokolov", email="maxim.sokolov@ebookapplications.com" },
]
description = "Python client for CAP GraphQL API."
readme = {file = "README.txt", content-type = "text/markdown"}

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage="https://github.com/cellannotation/cap-python-client"
Documentation="https://github.com/cellannotation/cap-python-client/blob/main/README.md"
Issues="https://github.com/cellannotation/cap-python-client/issues"
Changelog="https://github.com/cellannotation/cap-python-client/blob/main/CHANGELOG.md"


[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools"]

[project.optional-dependencies]
dev = ["ariadne"]
test = ["pytest"]

[tool.ariadne-codegen]
remote_schema_url = "https://celltype.info/graphql"
queries_path="queries.graphql"
async_client=false
include_all_inputs=false
include_all_enums=false
target_package_name="cap_client/client"
